# AICraft

./: .gitignore  LICENSE  README.md  build.gradle  gradle.properties
nativelib/: .env  Cargo.toml  cbindgen.toml  lib.h
nativelib/java/: Constants$root.java  RuntimeHelper.java  State.java  _CRT_DOUBLE.java  _CRT_FLOAT.java  _CoreCrtNonSecureSearchSortCompareFunction.java  _CoreCrtSecureSearchSortCompareFunction.java  _LDBL12.java  _LDOUBLE.java  _LONGDOUBLE.java  _Mbstatet.java  __crt_locale_data_public.java  __crt_locale_pointers.java  _div_t.java  _invalid_parameter_handler.java  _ldiv_t.java  _lldiv_t.java  _onexit_t.java  _purecall_handler.java  at_quick_exit$x0.java  atexit$x0.java  constants$0.java  constants$1.java  constants$10.java  constants$11.java  constants$12.java  constants$13.java  constants$14.java  constants$15.java  constants$16.java  constants$17.java  constants$18.java  constants$19.java  constants$2.java  constants$20.java  constants$21.java  constants$22.java  constants$23.java  constants$24.java  constants$25.java  (+30 more)
nativelib/src/: lib.rs
nativelib/src/ai/: ai.rs  mod.rs  script.rs
nativelib/src/chunk/: chunk.rs
nativelib/src/debug/: debug.rs
nativelib/src/logging/: bin.rs  log.rs  mod.rs
nativelib/src/path/: block_type.rs  cellinfo.rs  mod.rs  pathfinder.rs  state.rs
nativelib/src/save/: save.rs
nativelib/src/script/: script.rs
nativelib/src/state/: player.rs  world.rs
nativelib/src/util/: bitset.rs  hashmap.rs  mod.rs
nativelib/test/src/: main.rs
run/: options.txt  usercache.json
run/config/: c2me.toml  fastload.properties  modernfix-mixins.properties
run/config/fabric/: indigo-renderer.properties
run/saves/New World/: level.dat_old
run/saves/New World/advancements/: 1b5803ef-dab8-3673-85ae-9a9160028e1f.json  75e52373-1963-3666-bda9-8904d639e38b.json  8b099b45-7c1f-3749-8e57-5c8f500dad04.json  8fbcb74c-bd8d-3181-a022-3c858a10477d.json  984cf274-9eed-399c-97dc-353ad10f84a8.json  b0da1a12-66d3-34d6-99f0-6da43866ed58.json  de6c7baa-0bd3-34f4-81e0-2a85bbae7554.json  f8b3cbc3-8889-3cbd-890b-ed87a36c6fe4.json  ffc47c7c-81a1-3d8c-86bb-c720fcbf7d8f.json
run/saves/New World/entities/: r.-1.-1.mca  r.-1.0.mca  r.0.-1.mca  r.0.0.mca
run/saves/New World/playerdata/: 1b5803ef-dab8-3673-85ae-9a9160028e1f.dat_old  24c19b83-c868-336d-a5c8-61e6dc8d3cd5.dat_old  2ecec10b-3fca-3e44-9b51-4cca88e1c207.dat_old  5c4f0ba0-5b89-33cd-bd9d-007c51e4a99f.dat_old  7328fbd9-6879-3343-b321-ed1f1a1e9892.dat_old  8b099b45-7c1f-3749-8e57-5c8f500dad04.dat_old  8fbcb74c-bd8d-3181-a022-3c858a10477d.dat_old  984cf274-9eed-399c-97dc-353ad10f84a8.dat_old  b0da1a12-66d3-34d6-99f0-6da43866ed58.dat_old  c645540e-52c6-36d2-bbbe-373fe1591946.dat_old  de6c7baa-0bd3-34f4-81e0-2a85bbae7554.dat_old  f8b3cbc3-8889-3cbd-890b-ed87a36c6fe4.dat_old  ffc47c7c-81a1-3d8c-86bb-c720fcbf7d8f.dat_old
run/saves/New World/poi/: r.0.-1.mca  r.0.0.mca
run/saves/New World/region/: r.-1.-1.mca  r.-1.0.mca  r.0.-1.mca  r.0.0.mca
run/saves/New World/stats/: 1b5803ef-dab8-3673-85ae-9a9160028e1f.json  75e52373-1963-3666-bda9-8904d639e38b.json  8b099b45-7c1f-3749-8e57-5c8f500dad04.json  8fbcb74c-bd8d-3181-a022-3c858a10477d.json  984cf274-9eed-399c-97dc-353ad10f84a8.json  b0da1a12-66d3-34d6-99f0-6da43866ed58.json  de6c7baa-0bd3-34f4-81e0-2a85bbae7554.json  f8b3cbc3-8889-3cbd-890b-ed87a36c6fe4.json  ffc47c7c-81a1-3d8c-86bb-c720fcbf7d8f.json
run/saves/test/: level.dat_old
run/saves/test/advancements/: 02006724-8599-3350-ba13-0c0625a51a5e.json  05d2e66a-903f-3232-a8b0-3899ccc17800.json  099dce46-0df6-30e5-b5f1-2cad5dad09ff.json  0aee4775-e8b4-37ed-8049-6be96ef5de8e.json  0ee0c13d-70e5-3031-ae99-c5b7b6d44331.json  (+104 more)
src/main/resources/: aicraft.mixins.json  fabric.mod.json
xlogger/: index.html  package.json  uno.config.ts  vite.config.ts
xlogger/src/: App.tsx  HomeScreen.tsx  LogScreen.tsx  Toolbar.tsx  main.tsx  styles.css
xlogger/src-tauri/: Cargo.toml  tauri.conf.json
xlogger/src-tauri/src/: main.rs
(+268 files in other folders)
