[package]
name = "nativelib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "pathlib"
path = "src/lib.rs"

[[bin]]
name = "pathfinder"
path = "src/bin/bin.rs"

[build-dependencies]
cbindgen = "0.25.0"

[dependencies]
parking_lot = "0.12.1"
rand = "0.8.5"
num-traits = "0.2"
num-derive = "0.4"
log = "0.4.20"
log4rs = "1.2.0"
mlua = { version = "0.9.1", features = ["lua54", "vendored"] }
dotenv_codegen = "0.15.0"
tokio = { version = "1.32.0", features = ["test-util", "macros"] }
serde = { version = "1.0.188", features = ["derive"] }
openai-api-rs = "1.0.1"
serde_json = "1.0.105"
libc = "0.2.147"
ctor = "0.2.4"
bincode = "1.3.3" # TODO: use bincode to serialize pathfinding data and AI data, as well as a local qdrant based vector db
