[package]
name = "nativelib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "pathlib"
path = "src/lib.rs"

[[bin]]
name = "logview"
path = "src/logging/bin.rs"

[dependencies]
bincode = "1.3.3" # TODO: use bincode to serialize pathfinding data and AI data, as well as a local qdrant based vector db
ctor = "0.2.4"
dotenv_codegen = "0.15.0"
libc = "0.2.147"
log = "0.4.20"
log4rs = "1.2.0"
mlua = { version = "0.9.1", features = ["lua54", "vendored"] }
num-traits = "0.2"
num-derive = "0.4"
openai-api-rs = "1.0.1"
parking_lot = "0.12.1"
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["test-util", "macros"] }
crossterm = "0.27.0"
tui = "0.19.0"
uds_windows = "1.0.2"
