[package]
name = "xlogger"
version = "0.0.0"
description = "Advanced logging tool"
authors = ["daytrip"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "fs-exists", "fs-read-dir", "fs-read-file", "window-maximize", "window-close", "window-start-dragging", "window-unmaximize", "window-minimize", "window-show", "window-hide", "window-unminimize", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uds_windows = "1.0.2"
native-dialog = "0.6.4"
parking_lot = "0.12.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
